--- a/api/appsettings.json
+++ b/api/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "API_KEYS": {
+    "Admin": "ADMINKEY",
+    "Reader": "READERKEY"
+  },
   "AllowedHosts": "*"
 }
