feature: load env var for db connection

--- a/api/.env.development
+++ b/api/.env.development
@@ -1,5 +1,1 @@
-DB_HOST=localhost
-DB_PORT=5432
-DB_DATABASE=cargohub
-DB_USERNAME=postgres
-DB_PASSWORD=password
+DB_CONNECTION_STRING="Host=localhost;Port=5432;Database=cargohub;Username=postgres;Password=password"
