chore: Update dotnet.yml

--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -4,9 +4,13 @@ name: CargoHub API build
 
 on:
   push:
-    branches: [ "main" ]
+    branches:
+        - main
+        - development
   pull_request:
-    branches: [ "main" ]
+    branches:
+        - main
+        - development
 
 jobs:
   build:
