chore: load security_key via env

--- a/api/.env.development
+++ b/api/.env.development
@@ -1,1 +1,2 @@
 DB_CONNECTION_STRING="Host=localhost;Port=5432;Database=cargohub;Username=postgres;Password=password"
+SECURITY_KEY=SuperSecretKeyThatIs32BytesLongX
