--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -11,10 +11,24 @@ on:
       - development
 
 jobs:
+  lint:
+    name: Lint Code
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Setup .NET
+        uses: actions/setup-dotnet@v4
+        with:
+          dotnet-version: 8.0.x
+      - name: Restore dependencies
+        run: dotnet restore
+      - name: Run Code Formatter Verify No Changes
+        run: dotnet format --verify-no-changes > Reports/lint-results.txt 2>&1
+
   build:
     name: Build Application
     runs-on: ubuntu-latest
-
+    needs: lint
     steps:
       - uses: actions/checkout@v4
       - name: Setup .NET
@@ -25,22 +39,6 @@ jobs:
         run: dotnet restore
       - name: Build Project
         run: dotnet build --no-restore
-
-  lint:
-    name: Lint Code
-    runs-on: ubuntu-latest
-    needs: build
-
-    steps:
-      - uses: actions/checkout@v4
-      - name: Setup .NET
-        uses: actions/setup-dotnet@v4
-        with:
-          dotnet-version: 8.0.x
-      - name: Restore dependencies
-        run: dotnet restore
-      - name: Run Code Formatter
-        run: dotnet format --check
 
   test:
     name: Run Tests
