fix: github workflow change lint results path

--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -21,7 +21,7 @@ jobs:
         with:
           dotnet-version: 8.0.x
       - name: Run Code Formatter Verify No Changes
-        run: dotnet format --verify-no-changes > /api/lint-results.txt 2>&1
+        run: dotnet format --verify-no-changes > lint-results.txt 2>&1
 
   build:
     name: Build Application
