--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -22,12 +22,13 @@ jobs:
           dotnet-version: 8.0.x
       - name: Run Code Formatter Verify No Changes
         run: dotnet format --verify-no-changes > lint-results.txt 2>&1 --verbosity diagnostic
-        continue-on-error: true
       - name: Upload lint results 
         uses: actions/upload-artifact@v4     
         with:
           name: Lint results
           path: lint-results.txt
+        if: ${{ always() }}
+    
 
   build:
     name: Build Application
