--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -27,6 +27,7 @@ jobs:
         with:
           name: Lint results
           path: lint-results.txt
+          retention-days: 5
         if: ${{ always() }}
     
 
