fix: Changed if always to if failure for Lint Code job

--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -28,7 +28,7 @@ jobs:
           name: Lint results
           path: lint-results.txt
           retention-days: 5
-        if: ${{ always() }}
+        if: ${{ failure() }}
     
 
   build:
