--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -30,7 +30,6 @@ jobs:
           retention-days: 5
         if: ${{ failure() }}
     
-
   build:
     name: Build Application
     runs-on: ubuntu-latest
@@ -54,15 +53,19 @@ jobs:
         if: ${{ failure() }}
 
   test:
-    name: Run Tests
+    name: Run Tests & Generate Coverage
     runs-on: ubuntu-latest
-    needs: build
-
     steps:
-      - uses: actions/checkout@v4
-      - name: Setup .NET
-        uses: actions/setup-dotnet@v4
+        uses: actions/checkout@v4
+      
+      - name: Run Unit Tests & Generate Code Coverage
+        uses: alsi-lawr/dotnet-test-coverlet@v1
         with:
+          threshold: 80
           dotnet-version: 8.0.x
-      - name: Run Tests
-        run: dotnet test --no-build --verbosity normal
+
+      - name: Upload Coverage Report
+        uses: actions/upload-artifact@v4
+        with:
+          name: coverage-report
+          path: ${{ steps.run-tests.outputs.coverage-report-path }}
