--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -22,14 +22,14 @@ jobs:
           dotnet-version: 8.0.x
       - name: Run Code Formatter Verify No Changes
         run: dotnet format --verify-no-changes > lint-results.txt 2>&1 --verbosity diagnostic
-      - name: Upload lint results 
-        uses: actions/upload-artifact@v4     
+      - name: Upload lint results
+        uses: actions/upload-artifact@v4
         with:
           name: Lint results
           path: lint-results.txt
           retention-days: 5
         if: ${{ failure() }}
-    
+
   build:
     name: Build Application
     runs-on: ubuntu-latest
@@ -43,9 +43,9 @@ jobs:
       - name: Restore dependencies
         run: dotnet restore
       - name: Build Project
-        run:  dotnet build > build-results.txt 2>&1 --no-restore -nowarn:8602  
-      - name: Upload build logs 
-        uses: actions/upload-artifact@v4     
+        run: dotnet build > build-results.txt 2>&1 --no-restore -nowarn:8602
+      - name: Upload build logs
+        uses: actions/upload-artifact@v4
         with:
           name: Build results
           path: build-results.txt
@@ -56,8 +56,7 @@ jobs:
     name: Run Tests & Generate Coverage
     runs-on: ubuntu-latest
     steps:
-        uses: actions/checkout@v4
-      
+      - uses: actions/checkout@v4
       - name: Run Unit Tests & Generate Code Coverage
         uses: alsi-lawr/dotnet-test-coverlet@v1
         with:
