--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -55,6 +55,7 @@ jobs:
   test:
     name: Run Tests & Generate Coverage
     runs-on: ubuntu-latest
+    needs: build
     steps:
       - uses: actions/checkout@v4
       - name: Run Unit Tests & Generate Code Coverage
