feature(workflow): Implemented upload coverage report artifact

--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -71,3 +71,8 @@ jobs:
           targetdir: 'api.Tests/Report'
           reporttypes: 'Html'
           classfilters: '+EnumUtil'
+      - name: Upload coverage report artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: CoverageReport       
+          path: 'api.Tests/Report'
