--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -52,8 +52,8 @@ jobs:
           retention-days: 5
         if: ${{ failure() }}
 
-  test:
-    name: Run Tests 
+  test_and_code_coverage:
+    name: Run Tests & Generate Code Coverage Report
     runs-on: ubuntu-latest
     needs: build
     steps:
@@ -64,24 +64,13 @@ jobs:
           dotnet-version: 8.0.x
       - name: Run Tests & Generate Report
         run: dotnet test --collect:"XPlat Code Coverage"
-
-  code_coverage:
-    name : Generate Code Coverage Report
-    runs-on: ubuntu-latest
-    needs: test
-    steps:
-      - uses: actions/checkout@v4
-      - name: Setup .NET
-        uses: actions/setup-dotnet@v4
-        with:
-          dotnet-version: 8.0.x'
       - name: ReportGenerator
         uses: danielpalme/ReportGenerator-GitHub-Action@5.4.1
         with:
           reports: 'api.Tests/TestResults/*/coverage.cobertura.xml'
           targetdir: 'api.Tests/Report'
           reporttypes: 'Html'
-          classfilters: '+EnumUtil' # Temp unit test
+          classfilters: '+EnumUtil'
       - name: Upload coverage report artifact
         uses: actions/upload-artifact@v4
         with:
