--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -76,3 +76,9 @@ jobs:
         with:
           name: CoverageReport       
           path: 'api.Tests/Report'
+      - name: Add Coverage Report to Summary
+        run: |
+          echo "## Code Coverage Report" >> $GITHUB_STEP_SUMMARY
+          echo "[Bekijk de Coverage Report](api.Tests/Report/CoverageReport/index.html)" >> $GITHUB_STEP_SUMMARY
+
+          
