--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -69,7 +69,7 @@ jobs:
         with:
           reports: 'api.Tests/TestResults/*/coverage.cobertura.xml'
           targetdir: 'api.Tests/Report'
-          reporttypes: 'Html'
+          reporttypes: 'MarkdownSummaryGithub'
           classfilters: '+EnumUtil' # Temporarily
       - name: Upload coverage report artifact
         uses: actions/upload-artifact@v4
@@ -77,8 +77,6 @@ jobs:
           name: CoverageReport       
           path: 'api.Tests/Report'
       - name: Add Coverage Report to Summary
-        run: |
-          echo "## Code Coverage Report" >> $GITHUB_STEP_SUMMARY
-          echo "[Bekijk de Coverage Report](api.Tests/Report/CoverageReport/index.html)" >> $GITHUB_STEP_SUMMARY
+        run: cat api.Tests/Report/SummaryGithub.md >> $GITHUB_STEP_SUMMARY  
 
           
