--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -79,4 +79,17 @@ jobs:
       - name: Add Coverage Report to Summary
         run: cat api.Tests/Report/SummaryGithub.md >> $GITHUB_STEP_SUMMARY  
 
-          
+  dotnet_publish:
+    name: Publish
+    runs-on: ubuntu-latest
+    needs: test_and_code_coverage
+    steps:
+      - uses: actions/checkout@v4
+      - name: Setup .NET
+        uses: actions/setup-dotnet@v4
+        with:
+          dotnet-version: 8.0.x
+      - name: Restore dependencies
+        run: dotnet restore
+      - name: Dotnet publish
+        run: dotnet publish -c Release -r linux-x64 --self-contained -o ./release
