--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -93,3 +93,8 @@ jobs:
         run: dotnet restore
       - name: Dotnet publish
         run: dotnet publish -c Release -r linux-x64 --self-contained -o ./release
+      - name: Upload Linux x64 artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: linux-x64-artifact
+          path: ./release
