--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -5,6 +5,7 @@ on:
     branches:
       - main
       - development
+      - release
   pull_request:
     branches:
       - main
@@ -83,6 +84,7 @@ jobs:
     name: Publish
     runs-on: ubuntu-latest
     needs: test_and_code_coverage
+    if: ${{ github.ref_name == 'release' }} 
     steps:
       - uses: actions/checkout@v4
       - name: Setup .NET
