--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -98,6 +98,11 @@ jobs:
           reports: 'api.IntegrationTests/TestResults/*/coverage.cobertura.xml'
           targetdir: 'api.IntegrationTests/Report'
           reporttypes: 'MarkdownSummaryGithub'
+          classfilters: |
+            +api.Controllers.*    # Controllers
+            +api.DTOs.*           # DTOs
+            +api.Models.*         # Models
+            +api.Providers.*      # Providers
       - name: Upload Integration Tests Coverage Report Artifact
         uses: actions/upload-artifact@v4
         with:
