--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -12,73 +12,76 @@ on:
       - development
 
 jobs:
-  # lint:
-  #   name: Lint Code
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - uses: actions/checkout@v4
-  #     - name: Setup .NET
-  #       uses: actions/setup-dotnet@v4
-  #       with:
-  #         dotnet-version: 8.0.x
-  #     - name: Run Code Formatter Verify No Changes
-  #       run: dotnet format --verify-no-changes > lint-results.txt 2>&1 --verbosity diagnostic
-  #     - name: Upload lint results
-  #       uses: actions/upload-artifact@v4
-  #       with:
-  #         name: Lint results
-  #         path: lint-results.txt
-  #         retention-days: 5
-  #       if: ${{ failure() }}
+  lint:
+    name: Lint Code
+    runs-on: ubuntu-latest
+    if: ${{ github.ref_name == 'release' }} 
+    steps:
+      - uses: actions/checkout@v4
+      - name: Setup .NET
+        uses: actions/setup-dotnet@v4
+        with:
+          dotnet-version: 8.0.x
+      - name: Run Code Formatter Verify No Changes
+        run: dotnet format --verify-no-changes > lint-results.txt 2>&1 --verbosity diagnostic
+      - name: Upload lint results
+        uses: actions/upload-artifact@v4
+        with:
+          name: Lint results
+          path: lint-results.txt
+          retention-days: 5
+        if: ${{ failure() }}
 
-  # build:
-  #   name: Build Application
-  #   runs-on: ubuntu-latest
-  #   needs: lint
-  #   steps:
-  #     - uses: actions/checkout@v4
-  #     - name: Setup .NET
-  #       uses: actions/setup-dotnet@v4
-  #       with:
-  #         dotnet-version: 8.0.x
-  #     - name: Restore dependencies
-  #       run: dotnet restore
-  #     - name: Build Project
-  #       run: dotnet build > build-results.txt 2>&1 --no-restore -nowarn:8602
-  #     - name: Upload build logs
-  #       uses: actions/upload-artifact@v4
-  #       with:
-  #         name: Build results
-  #         path: build-results.txt
-  #         retention-days: 5
-  #       if: ${{ failure() }}
+  build:
+    name: Build Application
+    runs-on: ubuntu-latest
+    needs: lint
+    if: ${{ github.ref_name == 'release' }} 
+    steps:
+      - uses: actions/checkout@v4
+      - name: Setup .NET
+        uses: actions/setup-dotnet@v4
+        with:
+          dotnet-version: 8.0.x
+      - name: Restore dependencies
+        run: dotnet restore
+      - name: Build Project
+        run: dotnet build > build-results.txt 2>&1 --no-restore -nowarn:8602
+      - name: Upload build logs
+        uses: actions/upload-artifact@v4
+        with:
+          name: Build results
+          path: build-results.txt
+          retention-days: 5
+        if: ${{ failure() }}
 
-  # unit_tests_and_code_coverage:
-  #   name: Run Unit Tests & Generate Code Coverage Report
-  #   runs-on: ubuntu-latest
-  #   needs: build
-  #   steps:
-  #     - uses: actions/checkout@v4
-  #     - name: Setup .NET
-  #       uses: actions/setup-dotnet@v4
-  #       with:
-  #         dotnet-version: 8.0.x
-  #     - name: Run Unit Tests & Generate Report
-  #       run: dotnet test api.Tests/api.Tests.csproj --collect:"XPlat Code Coverage"
-  #     - name: ReportGenerator for Unit Tests
-  #       uses: danielpalme/ReportGenerator-GitHub-Action@5.4.1
-  #       with:
-  #         reports: 'api.Tests/TestResults/*/coverage.cobertura.xml'
-  #         targetdir: 'api.Tests/Report'
-  #         reporttypes: 'MarkdownSummaryGithub'
-  #         classfilters: '+EnumUtil' # Temporarily
-  #     - name: Upload Unit Tests Coverage Report Artifact
-  #       uses: actions/upload-artifact@v4
-  #       with:
-  #         name: CoverageReportUnitTests
-  #         path: 'api.Tests/Report'
-  #     - name: Add Unit Test Coverage Report to Summary
-  #       run: cat api.Tests/Report/SummaryGithub.md >> $GITHUB_STEP_SUMMARY
+  unit_tests_and_code_coverage:
+    name: Run Unit Tests & Generate Code Coverage Report
+    runs-on: ubuntu-latest
+    needs: build
+    if: ${{ github.ref_name == 'release' }} 
+    steps:
+      - uses: actions/checkout@v4
+      - name: Setup .NET
+        uses: actions/setup-dotnet@v4
+        with:
+          dotnet-version: 8.0.x
+      - name: Run Unit Tests & Generate Report
+        run: dotnet test api.Tests/api.Tests.csproj --collect:"XPlat Code Coverage"
+      - name: ReportGenerator for Unit Tests
+        uses: danielpalme/ReportGenerator-GitHub-Action@5.4.1
+        with:
+          reports: 'api.Tests/TestResults/*/coverage.cobertura.xml'
+          targetdir: 'api.Tests/Report'
+          reporttypes: 'MarkdownSummaryGithub'
+          classfilters: '+EnumUtil' # Temporarily
+      - name: Upload Unit Tests Coverage Report Artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: CoverageReportUnitTests
+          path: 'api.Tests/Report'
+      - name: Add Unit Test Coverage Report to Summary
+        run: cat api.Tests/Report/SummaryGithub.md >> $GITHUB_STEP_SUMMARY
 
   integration_tests_and_code_coverage:
     name: Run Integration Tests & Generate Code Coverage Report
@@ -99,10 +102,10 @@ jobs:
           targetdir: 'api.IntegrationTests/Report'
           reporttypes: 'MarkdownSummaryGithub'
           classfilters: |
-            +api.Controllers.*
-            +api.DTOs.*
-            +api.Models.*
-            +api.Providers.*
+            +api.Controllers.*    # Controllers
+            +api.DTOs.*           # DTOs
+            +api.Models.*         # Models
+            +api.Providers.*      # Providers
             -api.*                # Exclude everything else
       - name: Upload Integration Tests Coverage Report Artifact
         uses: actions/upload-artifact@v4
