--- a/api.IntegrationTests/api.IntegrationTests.csproj
+++ b/api.IntegrationTests/api.IntegrationTests.csproj
@@ -29,4 +29,11 @@
     <ProjectReference Include="..\api\api.csproj" />
   </ItemGroup>
 
+<ItemGroup>
+  <None Update=".env.json">
+    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+  </None>
+</ItemGroup>
+
+
 </Project>
