fix(CI): Removed trailing comma in env json

--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -95,7 +95,7 @@ jobs:
       - name: Set up .env.json file
         run: |
           echo '{' > api.IntegrationTests/.env.json
-          echo '  "API_ADMIN": "${{ secrets.API_ADMIN }}",' >> api.IntegrationTests/.env.json
+          echo '  "API_ADMIN": "${{ secrets.API_ADMIN }}"' >> api.IntegrationTests/.env.json
           echo '}' >> api.IntegrationTests/.env.json
       - name: Run Integration Tests & Generate Report
         run: dotnet test api.IntegrationTests/api.IntegrationTests.csproj --collect:"XPlat Code Coverage"
